packages/fxa-content-server/app/styles/modules/_settings.scss
/* ... */
// settings buttons
.settings-button {
  @include font();
  border-radius: $small-border-radius;
  cursor: pointer;
  font-size: $base-font;
  transition-duration: $short-transition;
  transition-property: background-color;

  .button-row & {
    @extend .settings-button;
    margin: 0;
    padding: 0;

    @include respond-to('big') {
      height: 45px;
      width: 48%;
    }

    @include respond-to('small') {
      height: 40px;
      width: 48%;
    }

    &:last-child {

      html[dir='ltr'] & {
        float: right;

        &.unpaired {
          float: none;
        }
      }

      html[dir='rtl'] & {
        float: left;

        &.unpaired {
          float: none;
        }
      }

      html[dir] .clients & {
        @include respond-to('small') {
          float: none;
          margin: 10px 0;
        }
      }
    }
  }

  &.settings-unit-toggle,
  &.settings-unit-loading {
    display: block;
    height: 35px;

    @include respond-to('big') {
      width: 100px;
    }

    @include respond-to('small') {
      width: 29%;
    }
  }

  &.primary {
    background: $button-background-color;
    border: solid 1px $button-border-default-color;
    color: $message-text-color;

    &:hover {
      background: $button-background-hover-color;
      border-color: $button-border-hover-color;
    }

    &:active {
      background: $button-background-active-color;
      border-color: $button-border-active-color;
    }

    &:focus {
      box-shadow: 0 0 0 2px $button-box-shadow-color;
    }

    &:disabled,
    &.disabled {
      background: $button-background-default-color;
      border: solid 1px $button-border-disabled-color;
      color: $button-disabled-color;
    }
  }

  &.secondary {
    background: $secondary-button-background-color;
    border: 1px solid $secondary-button-border-color;
    color: $text-color;

    &:hover {
      background: darken($secondary-button-background-color, 10);
      border-color: $button-border-disabled-color;
    }

    &:active {
      background: $button-border-disabled-color;
      border-color: $color-grey-dark;
      color: $color-black;
    }

    &:focus {
      background: $secondary-button-background-color;
      border-color: $html-background-color;
      box-shadow: 0 0 0 2px $button-box-shadow-color;
    }

    &:disabled,
    &.disabled {
      background: $button-background-default-color;
      border: solid 1px $button-border-disabled-color;
      color: $button-disabled-color;
      opacity: 0.5;
    }
  }

  &.secondary-disabled {
      background: $secondary-button-background-color;
      border: 1px solid $secondary-button-border-color;
      color: $text-color;
  }

  &.warning {
    background: $error-background-color;
    border: 0;
    color: $message-text-color;

    &:hover {
      background: darken($error-background-color, 5);
    }

    &:active {
      background: darken($error-background-color, 10);
    }

    &:focus {
      box-shadow: 0 0 0 2px rgba(lighten($error-background-color, 15), .75);
    }

    &:disabled,
    &.disabled {
      background: $button-background-default-color;
      border: solid 1px $button-border-disabled-color;
      color: $button-disabled-color;
    }
  }

  &.unpaired {
    width: 100%;
  }
}

// area above white box with avatar content
#fxa-settings-profile-header {
  border-bottom: 1px solid $marketing-border-color;
  padding-bottom: 18px;
  text-align: center;
  white-space: nowrap;

  @include respond-to('big') {
    margin-bottom: 20px;
  }

  @include respond-to('small') {
    margin-bottom: 10px;
  }

  .card-header,
  .card-subheader {
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: nowrap;
    white-space: nowrap;
  }

  .card-header {
    line-height: 30px;
    margin-bottom: 0;
  }

  .card-subheader {
    font-size: 14px;
    font-weight: 200;
    line-height: normal;
    margin-bottom: 6px;
  }
}

.settings-child-view {
  &:first-child .settings-unit {

    @include respond-to('big') {
      padding: 0 0 20px;
    }

    @include respond-to('small') {
      padding: 0 0 10px;
    }
  }

  &:last-child .settings-unit {
    border-bottom: 0;

    @include respond-to('big') {
      padding: 20px 0 0;
    }

    @include respond-to('small') {
      padding: 10px 0 0;
    }
  }
}

.settings-unit {
  border-bottom: 1px solid $marketing-border-color;

  @include respond-to('big') {
    padding: 20px 0;
  }

  @include respond-to('small') {
    padding: 10px 0;
  }

  .error {
    padding: 5px 10px;
    top: 0;
  }
}

.settings-unit-stub {
  height: 35px;

  .settings-unit-summary {
    display: inline-block;
    margin-top: 2px;
    overflow: hidden;

    html[dir='ltr'] & {
      float: left;
    }

    html[dir='rtl'] & {
      float: right;
    }

    @include respond-to('big') {
      width: 350px;

      html[dir='ltr'] & {
        margin-right: 10px;
      }

      html[dir='rtl'] & {
        margin-left: 10px;
      }
    }

    @include respond-to('small') {
      width: 70%;

      html[dir='ltr'] & {
        margin-right: 1%;
      }

      html[dir='rtl'] & {
        margin-left: 1%;
      }
    }
  }

  .settings-unit-title {
    color: $text-color;
    line-height: 19px;
    margin: 0;

    @include respond-to('big') {
      font-size: $medium-font;
    }

    @include respond-to('small') {
      font-size: $base-font;
    }
  }

  .settings-unit-subtitle {
    color: $faint-text-color;
    font-size: $small-font;
    font-weight: normal;
    line-height: 16px;
    margin: 5px 0 0 0;
  }

  .settings-unit-title,
  .settings-unit-subtitle {
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: nowrap;
    white-space: nowrap;
    width: 360px;
  }

  .settings-unit-title:only-child {
    line-height: 35px;
  }
}

.settings-unit-details {
  display: none;

  a {
    text-decoration: none;
  }

  p {
    color: $faint-text-color;
    margin: 6px 0 24px;
  }
}

.open .settings-unit-details {
  display: block;
}
/* ... */

